--- a/css/main.css
+++ b/css/main.css
@@ -333,8 +333,7 @@ nav ul li {
 
 
 
-
-
+/********* DETAIL PAGES ************/
 
 
 
@@ -435,15 +434,18 @@ nav ul li {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
+/******** TABLET STYLES ***********/
+
+@media only screen and (min-width: 768px;) {
+
+
 }
 
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+/******** DESKTOP STYLES ***********/
+
+@media only screen and (min-width: 960px;) {
+
+
 }
 
 /* ==========================================================================
