--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/** BASE STYLES **/
+/** BASE STYLES - mobile first **/
 
 body {
     color: #363636;
@@ -105,47 +105,54 @@ body {
     font-size: 1em;
 }
 
-#about {
-    height: 650px;
-}
-
-#feed {
-    height: 500px;
-}
 
 /** GRID STYLES **/
 
-.full-width {
+.row {
     width: 100%;
-    max-width: 960px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
-.half-width {
-    width: 50%;
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+[class*="col-"] {
     float: left;
 }
 
-.third-width {
-    width: 33.33%;
-    float: left;
-}
 
 /** HEADER STYLES **/
 
 header {
-    /*background: url("../img/background3.jpg");
-    background-size: cover; */
-    height: 100px;
-    max-width: 960px;
+    background-image: url("../img/hero-img.jpg");
+    background-size: cover; 
+    width: 100%;
+    height: 200px;
     margin: auto;
 }
 
 header h1 {
-    font-size: 3em;
+    font-size: 2em;
     font-weight: lighter;
-    letter-spacing: 3px;
-    padding: 50px 10%;
+    letter-spacing: 1px;
+    text-align: center;
     text-transform: uppercase;
 }
 
@@ -154,47 +161,66 @@ header a {
     text-decoration: none;
 }
 
-nav {
-    float: right;
-    padding: 80px 10%;
+.dropbtn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+    font-size: 1em;
 }
 
-nav a {
-    color: #363636;
-    font-family: "Lato", sans-serif;
-    margin: 0;
-    padding-left: 10px;
+.dropdown {
+    display: block;
+    text-align: center;
+    position: relative;
+}
+
+.dropdown-content {
+    background-color: #ededed;
+    display: none;
+    min-width: 160px;
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    display: block;
+    padding: 12px 16px;
+    text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+.dropdown-content a:hover {
+    background-color: #ba8ca3;
+    color: #cdcdcd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 
 }
 
-nav a:hover {
+.dropdown:hover .dropdownbtn {
     color: #ba8ca3;
 }
 
-nav ul {
-    text-decoration: none;
-}
-
-nav ul li {
-    display: inline-block;
-
-}
 
 /** ABOUT STYLES **/
+
+main {
+    width: 96%;
+    padding: 0 2%;
+    margin: auto;
+}
 
 #about .full-width {
     padding: 80px 0;
 }
 
 #about img {
-    max-height: 300px;
-    max-width: 960px;
-    width: 100%;
-    height: auto;
-    border-top: 3px solid #cdcdcd;
-    border-bottom: 3px solid #cdcdcd;
+    display: none;
 }
 
 #about h2 {
@@ -278,6 +304,11 @@ nav ul li {
 
 
 /** FOOTER STYLES **/
+
+footer {
+    width: 100%;
+    margin: auto;
+}
 
 #contact {
     background-color: #cdcdcd;
@@ -436,17 +467,7 @@ nav ul li {
 
 /******** TABLET STYLES ***********/
 
-@media only screen and (min-width: 768px;) {
 
-
-}
-
-/******** DESKTOP STYLES ***********/
-
-@media only screen and (min-width: 960px;) {
-
-
-}
 
 /* ==========================================================================
    Print styles.
