--- a/css/main.css
+++ b/css/main.css
@@ -137,13 +137,13 @@ body {
     float: left;
 }
 
-
 /** HEADER STYLES **/
 
 header {
     background-image: url("../img/hero-img.jpg");
     background-size: cover; 
     width: 100%;
+    max-width: 1200px;
     height: 200px;
     margin: auto;
 }
@@ -165,7 +165,6 @@ header a {
     background-color: transparent;
     border: none;
     cursor: pointer;
-
     font-size: 1em;
 }
 
@@ -178,7 +177,7 @@ header a {
 .dropdown-content {
     background-color: #ededed;
     display: none;
-    min-width: 160px;
+    width: 100%;
     position: absolute;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -296,9 +295,8 @@ main {
 }
 
 #feed input {
-    /* how do i center this? */
     display: block;
-    margin: 0 auto;
+    margin: 20px auto;
 
 }
 
@@ -306,27 +304,41 @@ main {
 /** FOOTER STYLES **/
 
 footer {
-    width: 100%;
     margin: auto;
+    max-width: 1200px;
+    min-width: 225px;
+    width: 100%;
 }
 
 #contact {
     background-color: #cdcdcd;
-    height: 300px;
+    width: 96%;
+    padding: 5% 2%;
+    margin: 0 auto;
+    text-align: center;
 }
 
-#contact .full-width {
-    padding: 50px 0;
+#contact figure {
+    width: 20%;
+    height: 20%;
+    margin: 0 auto;
+}
+
+#contact img {
+    width: 100%;
+    height: auto;
 }
 
 #contact p {
     color: white;
     font-size: 0.7em;
-    padding-left: 10%;
+    line-height: .5em;
+    text-align: center;
 }
 
 #contact h2, #contact h3, #contact ul {
-    padding-left: 20%;
+    color: white;
+    margin: 10px auto;
 }
 
 #contact h3 {
@@ -345,22 +357,22 @@ footer {
 }
 
 #contact ul {
+    font-size: 1.5em;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 #contact ul li {
     display: inline-block;
-}
-
-#contact i {
-    padding-right: 20px;
-    font-size: 2em;
+    padding: 0 1%;
 }
 
 #contact .fa-envelope-o {
     font-size: 1em;
     padding-left: 10px;
 }
+
 
 
 
