tablet and desktop styles added

--- a/css/main.css
+++ b/css/main.css
@@ -105,12 +105,11 @@ body {
     font-size: 1em;
 }
 
-
 /** GRID STYLES **/
 
 .row {
     width: 100%;
-    max-width: 1200px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
@@ -120,18 +119,18 @@ body {
     display: table;
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+.col-sm-1 {width: 8.33%;}
+.col-sm-2 {width: 16.66%;}
+.col-sm-3 {width: 25%;}
+.col-sm-4 {width: 33.33%;}
+.col-sm-5 {width: 41.66%;}
+.col-sm-6 {width: 50%;}
+.col-sm-7 {width: 58.33%;}
+.col-sm-8 {width: 66.66%;}
+.col-sm-9 {width: 75%;}
+.col-sm-10 {width: 83.33%;}
+.col-sm-11 {width: 91.66%;}
+.col-sm-12 {width: 100%;}
 
 [class*="col-"] {
     float: left;
@@ -212,6 +211,7 @@ main {
     width: 96%;
     padding: 0 2%;
     margin: auto;
+    max-width: 1200px;
 }
 
 #about .full-width {
@@ -235,9 +235,8 @@ main {
 
 /** FEED STYLES **/
 
-#feed .full-width {
-    /*background-color: #ededed;*/ 
-    padding: 50px 0;
+#feed {
+    max-width: 1200px;
 }
 
 #feed h1 {
@@ -374,10 +373,7 @@ footer {
 }
 
 
-
-
 /********* DETAIL PAGES ************/
-
 
 
 
@@ -478,6 +474,120 @@ footer {
    ========================================================================== */
 
 /******** TABLET STYLES ***********/
+
+@media screen and (min-width: 600px) {
+
+.row {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/** GRID STYLES **/
+
+    .col-md-1 {width: 8.33%;}
+    .col-md-2 {width: 16.66%;}
+    .col-md-3 {width: 25%;}
+    .col-md-4 {width: 33.33%;}
+    .col-md-5 {width: 41.66%;}
+    .col-md-6 {width: 50%;}
+    .col-md-7 {width: 58.33%;}
+    .col-md-8 {width: 66.66%;}
+    .col-md-9 {width: 75%;}
+    .col-md-10 {width: 83.33%;}
+    .col-md-11 {width: 91.66%;}
+    .col-md-12 {width: 100%;}
+
+/*** Header Styles ***/
+
+header {
+    background-image: none;
+ }
+
+/*** About Styles ***/
+
+#about img {
+    display: block;
+    max-height: 300px;
+    max-width: 960px;
+    width: 100%;
+    height: auto;
+    border-top: 3px solid #cdcdcd;
+    border-bottom: 3px solid #cdcdcd;
+}
+
+/*** Feed Styles ***/
+
+/*** Footer Styles ***/
+
+#contact figure {
+    width: 30%;
+    height: 30%;
+}
+
+footer {
+    margin: auto;
+    max-width: 1200px;
+    min-width: 225px;
+    width: 100%;
+}
+
+#contact h2, #contact h3, #contact ul {
+    text-align: left;
+    padding-left: 20%;
+}
+
+    } /** Tablet Styles **/
+
+/********** DESKTOP STYLES ********/
+
+@media only screen and (min-width: 960px) {
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/** GRID STYLES **/
+
+    .col-lg-1 {width: 8.33%;}
+    .col-lg-2 {width: 16.66%;}
+    .col-lg-3 {width: 25%;}
+    .col-lg-4 {width: 33.33%;}
+    .col-lg-5 {width: 41.66%;}
+    .col-lg-6 {width: 50%;}
+    .col-lg-7 {width: 58.33%;}
+    .col-lg-8 {width: 66.66%;}
+    .col-lg-9 {width: 75%;}
+    .col-lg-10 {width: 83.33%;}
+    .col-lg-11 {width: 91.66%;}
+    .col-lg-12 {width: 100%;}
+    [class*="col-"] {
+    float: left;
+    }
+
+/*** Header Styles ***/
+
+/*** About Styles ***/
+
+
+/*** Feed Styles ***/
+
+
+    } /** Desktop Styles **/
 
 
 
